src/www/themes/BurningParrot/css/includes/project-admin/_members.scss
/*!
 * Copyright Enalean (c) 2017. All rights reserved.
 *
 * Tuleap and Enalean names and logos are registrated trademarks owned by
 * Enalean SAS. All other trademarks or names are properties of their respective
 * owners.
 *
 * This file is a part of Tuleap.
 *
 * Tuleap is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * Tuleap is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Tuleap. If not, see <http://www.gnu.org/licenses/>.
 */

#project-admin-members-controls {
    display: flex;
}

#project-admin-members-add-user-section {
    margin-right: $tlp-double-spacing;
}

#project-admin-members-modal-buttons-section {
    > :not(:first-child) {
        margin-left: $tlp-spacing;
    }
}

#project-admin-members-add-user-select {
    width: 250px;
}

#project-admin-members-modal-import-users-button {
    margin-left: $tlp-double-spacing;
}

.project-admin-members-import-members-title {
    margin: 0 0 $tlp-double-spacing;
}

#project-admin-members-input-file-helper {
    line-height: 24px;
}

